fix: overflow and checkout position

--- a/src/App.css
+++ b/src/App.css
@@ -103,7 +103,7 @@
     justify-content: space-evenly;
     gap: 20px;
     margin-bottom: 10px;
-    overflow: unset;
+    overflow: hidden;
   }
 }
 
