--- a/src/components/Cart/style.css
+++ b/src/components/Cart/style.css
@@ -74,7 +74,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
     gap: 10px;
   }
 
